Fixed css issues with shift and buttons displaying subscript. #9

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -44,10 +44,13 @@
     height: 30px;
 }
 
-#subscript{
+.subscript{
     font-size:8px;   
-    vertical-align:super;
+    vertical-align: baseline;
+    position: relative;
+    top: -0.8em;
 }
+
 
 #statusbar{
     position:absolute;
